--- a/CSS/style.css
+++ b/CSS/style.css
@@ -409,6 +409,7 @@ img {
   justify-content: center;
   width: 208px;
   height: 80px;
+  margin-right: 80px;
 }
 .appeal-text {
   font-size: 16px;
@@ -449,21 +450,56 @@ img {
 .footer-sociale-icon {
 }
 /* --------footer-modal---------------------- */
-.footer-modal {
+/* .footer-modal {
   width: 453px;
   height: 80px;
-}
+} */
 
 .footer-modal-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  /* identical to box height, or 150% */
-
   letter-spacing: 0.02em;
-
   color: #ffffff;
 }
+
+.footer-form {
+  display: flex;
+}
+
+.footer-form-input {
+  width: 264px;
+  height: 40px;
+  padding: 15px;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: #2e2f42;
+  color: #ffffff;
+}
+
+.footer-form-btn {
+  display: flex;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 24px;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  border: none;
+  margin-left: 24px;
+}
+
+.footer-btn-icon {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+
 /* -------------Button---------------- */
 .button {
   font-family: "Roboto", sans-serif;
