--- a/CSS/style.css
+++ b/CSS/style.css
@@ -643,6 +643,7 @@ img {
   width: 408px;
   height: 576px;
   background-color: #fcfcfc;
+  /* padding-top: 72px; */
 }
 
 .modal-close-btn {
@@ -669,4 +670,75 @@ img {
 
 .modal-close-btn-icon {
   transition: fill var(--transition-dur-fun);
+}
+
+.contact-form {
+  width: 100%;
+  height: 100%;
+  padding: 72px 24px 0 24px;
+  margin: 0 auto;
+}
+
+.contact-form-field {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.contact-form-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  /* margin-top: 72px; */
+  margin-bottom: 20px;
+}
+
+.modal-lable-text {
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+}
+
+.contact-form-input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transformy: transform(-50%);
+}
+
+.contact-form-textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  resize: none;
+}
+
+.contact-form-accept-title {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 20px;
+}
+
+.form-btn-send {
+  display: block;
+  width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  margin: 0 auto;
 }
